# flet-extension

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md  rive.md
src/flet_extension/: __init__.py  flet_extension.py  flet_service_extension.py
src/flutter/flet_extension/: CHANGELOG.md  README.md  pubspec.yaml
src/flutter/flet_extension/lib/: flet_extension.dart
src/flutter/flet_extension/lib/src/: extension.dart  flet_extension.dart  flet_service_extension.dart
